--- a/src/styles/theme.scss
+++ b/src/styles/theme.scss
@@ -4,7 +4,7 @@
  * This is the main entry file for all .scss modules
  *
  */
-@import '~normalize.css/normalize';
+//@import '~normalize.css/normalize';
 
 /**
  * Settings.
@@ -32,6 +32,7 @@
  * Components.
  */
 @import './components/buttons';
+@import './components/carousel';
 @import './components/icons';
 @import './components/placeholders';
 @import './components/responsive-images';
